--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,10 +1,7 @@
 doctype html
 html(lang='en')
-  head
-    title Dashboard
-    script(src="https://unpkg.com/axios/dist/axios.min.js")
-  body
-    app-container
-    script.
-      axios.get('/proxy/alfresco/api/people');
-      axios.post('/proxy/alfresco/slingshot/profile/userstatus', { status: 'test'});
+   head
+      title Dashboard
+      script(src="/app.bundle.js")
+   body
+      p Check the Xhr logs
