Update to add basic Vue.js component

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang='en')
    head
       title Dashboard
-      script(src="/app.bundle.js")
+      
    body
-      p Check the Xhr logs
+      div#app
+         alf-list
+      script(src="/app.bundle.js")
